--- a/requirements.txt
+++ b/requirements.txt
@@ -2,3 +2,9 @@ requests
 markdownify
 openai>=1.0.0
 python-dotenv
+langchain
+langchain-community
+langchain-google-genai
+langchain-text-splitters
+chromadb
+streamlit
