--- a/requirements.txt
+++ b/requirements.txt
@@ -2,9 +2,10 @@ requests
 markdownify
 openai>=1.0.0
 python-dotenv
+streamlit
+chromadb
 langchain
 langchain-community
-langchain-google-genai
+langchain-core
 langchain-text-splitters
-chromadb
-streamlit
+langchain-google-genai
